fix some test-problems